# ai-red-teaming-training

./: LLMFundamentals.md  Overview.md  README.md  RunLLM_Using_Llamastack.md  RunLLm_Using_Transformers.md  SetupLab.md  SetupOllama.md  awesome_resources.md
content/1_intro_ai_red_teaming/: 1_1_history_of_ai_risks.md  1_2_ai_risks.md  1_3_ai_red_teaming.md  1_4_ai_attacks_taxonomy_part_1.md  1_5_ai_attacks_taxonomy_part_2.md  1_6_jailbreaking_demo.md  README.md  ai_attack_surface.md
content/2_llm_architecture/: 2_1_history_of_llms.md  2_2_tokenization.md  2_5_hyperparameters.md  2_6_llm_comparisons.md  README.md
content/3_prompt_injections/: 3.1.1_realife_prompt_injection_examples.md  3.8_advance_prompt_injections.md  3_1_intro_prompt_injections.md  3_2_anatomy_of_a_prompt.md  3_3_craft_a_prompt_injection_prompt.md  3_4_basics_of_prompt_injection_techniques.md  3_5_intermediate_prompt_injection_techniques.md  README.md
content/4_llm_training/: 4_1_inference_advance_params.md  4_2_foundation_model_training.md  4_3_finetuing_llms.md  4_4_rag.md  README.md
content/5_owasp_top_10_llms_apps/: 5_1_types_of_llm_apps.md  5_2_chatgpt_as_agent.md  5_3_owasp_top_10_llm_apps.md  5_4_1_hands_on_data_leaks.md  5_4_2_hands_on_prompt_injection.md  5_5_1_rag_threat_model.md  5_5_2_ai_agents_threat_model.md
content/6_advanced_ai/: 6_3_reasoning_models_pros_cons.md
content/6_ai_agents/: 6_1_intro_to_reasoning_models.md  6_2_deepseek_training_innovation.md  6_4_into_ai_agents.md  6_5_autonomous_ai_agents.md  6_6_autonomous_pentesting_agent.md  6_7_architecture_autonomous_agents.md  6_8_detoxio_autonomous_jailbreak_agent.md
content/7_ai_safety_prevention/: 7_1_prevent_jailbreaks.md
content/llm_architecture/: llm_comparisons.md  self_attention.md  transformer.md
content/prompt_injections/: try_prompt_injections_on_medusa_pokebot.md
lab/: Access_OR_Running_LLMs.md  README.md
lab/ai_security/mcp/: Readme.md  discovery.md  instruction.md  mcp_inspector.md  mcp_sec_lab.md
lab/basics/: faq.md  tmux.md
lab/conda/: linux_install.sh
lab/cyber/: pentestgpt.md  wotkflow.md
lab/cyber/cia/: README.md
lab/cyber/vibe_hacking/: CVE-2025-24813.md  CVE-2025-3248.md  README.md
lab/docker/vuln_lab_1/: .env.template  README.md  docker-compose.yml
lab/embedding/poisoned_data_demo/: README.md  main.py  pyproject.toml
lab/experiments/: textattack_prompt_guard.py
lab/ollama/: running_deepseek_ollama.md
lab/terraform/: README.md  validate_installation.sh
lab/tools/: garak.md  textattack.md
lab/tools/agents/autogen2/: README.md  attack.txt  example_prompt.txt  main.py  main2.py  pyproject.toml
lab/tools/agents/autogen2/autogen/ext/amass_agent/: __init__.py  _amass_agent.py
lab/vuln_apps/: medusa.md
lab/vuln_apps/demo/: .env.template  .gitignore  Dockerfile  README.md  RELEASE  main.py  pyproject.toml
lab/vuln_apps/demo_text2sql_toolkit/: .env.template  .gitignore  README.md  create_employees.py  main.py  pyproject.toml  text2sql.py
lab/vuln_apps/demo_text2sql_toolkit/db/: example.db
lab/vuln_apps/demo_tool_agents/: .env.template  Dockerfile  NAME  README.md  RELEASE  main.py  pyproject.toml
references/cyber/: offensive_tools.md
(+111 files in other folders)
