[tool.poetry]
name = "demo-tool-agents"
version = "0.1.0"
description = ""
authors = ["jchauhan <jitendra.chauhan@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
agentdojo = { version = "^0.1.29"}
gradio = "^5.23.1"
dtx-prompt-guard-client = "^0.2.0"
dotenv = "^0.9.9"
duckduckgo-search = "^7.5.5"
lxml = "^5.3.1"
requests = "^2.32.3"
beautifulsoup4 = "^4.13.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
