[tool.poetry]
name = "autogen"
version = "0.1.0"
description = ""
authors = ["jchauhan <jitendra@detoxio.ai>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11.0"
playwright = "^1.49.1"
autogen-agentchat = "^0.4.2"
autogen-ext = {extras = ["magentic-one"], version = "^0.4.5"}
tiktoken = "^0.8.0"
aiofiles = "^24.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
